--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap');
 
 :root {
-    --yellow: rgb(249, 212, 30);
+    --yellow: #ffd602;
+    --red: #d5040a;
+    --blue: #036cb6;
 }
 
 
@@ -13,7 +15,7 @@
 }
 
 .loader {
-    position: relative;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background: var(--yellow);
@@ -21,7 +23,8 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-    animation: loaderanimation 2s linear infinite;
+    animation: loaderanimation 3s linear infinite;
+    z-index: 100;
 }
 
 .loader > div{
@@ -61,4 +64,129 @@
         backdrop-filter: 0px;
         /* opacity: ; */
     }
+}
+
+a {
+    text-decoration: none;
+}
+
+/* container */
+.container {
+    position: absolute;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: 20% 50% 30%;
+    grid-template-areas:
+        "header aside"
+        "section aside"
+        "footer aside";
+    height: 100%;
+    width: 100%;
+}
+
+/* header */
+
+header {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    grid-area: header;
+    grid-column: 1 / 3;
+    /* border: 2px solid; */
+    padding: 0 2rem;
+}
+
+.logo img {
+    width: 100px;
+}
+
+.navbar {
+    display: flex;
+    gap: 10px;
+    /* display: none; */
+}
+
+.nav-item {
+    text-transform: uppercase;
+    color: var(--red);
+}
+
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    grid-area: section;
+    padding-left: 80px;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    /* border: 2px solid pink; */
+}
+
+.main-content h5 {
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+.main-content h4 {
+    font-size: 1.6rem;
+}
+
+.main-content p {
+    max-width: 400px;
+    font-weight: 300;
+}
+
+/* side content */
+.side-content {
+    display: grid;
+    grid-area: aside;
+    width: 100%;
+    grid-template-columns: repeat(6, 1fr);
+    align-items: center;
+}
+
+.side-content p {
+    font-size: 2rem;
+    text-transform: capitalize;
+    transform: rotate(-90deg);
+    font-weight: 300;
+}
+.side-content img {
+    width: 100%;
+    max-width: 300px;
+    max-height: 500px;
+}
+
+.side-content .block {
+    width: 250px;
+    height: 100%;
+    background: var(--yellow);
+    grid-column: 6 / 6;
+}
+
+
+/* footer */
+footer {
+    background: var(--yellow);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    grid-area: footer;
+    grid-row: 3 / 5;
+    padding-top: 2rem;
+    border-top-right-radius: 3rem;
+}
+
+.hero-card {
+    background: var(--blue);
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+}
+
+.hero-card img {
+    width: 100%;
+    max-width: 200px;
 }
