--- a/css/styles.css
+++ b/css/styles.css
@@ -89,28 +89,31 @@ a {
 
 header {
     width: 100%;
-    height: 5rem;
+    height: 8rem;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 30px;
     grid-area: header;
     grid-column: 1 / 3;
-    /* border: 2px solid; */
-    padding: 0 2rem;
+    grid-row: 1/3;
+    padding: 0 80px;
 }
 
 .logo img {
-    width: 100px;
+    width: 50px;
 }
 
 .navbar {
     display: flex;
     gap: 10px;
+    align-items: center;
     /* display: none; */
 }
 
 .nav-item {
     text-transform: uppercase;
+    font-size: .8rem;
+    font-weight: 300;
     color: var(--red);
 }
 
@@ -118,6 +121,7 @@ header {
 .main-content {
     display: flex;
     flex-direction: column;
+    justify-content:center;
     grid-area: section;
     padding-left: 80px;
     grid-row: 2 / 3;
@@ -126,17 +130,21 @@ header {
 }
 
 .main-content h5 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 300;
+    margin-top: -7rem;
 }
 
 .main-content h4 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .main-content p {
+    margin-top: 30px;
     max-width: 400px;
     font-weight: 300;
+    font-size: 1.2rem;
+    text-align: justify;
 }
 
 /* side content */
@@ -156,15 +164,16 @@ header {
 }
 .side-content img {
     width: 100%;
-    max-width: 300px;
-    max-height: 500px;
+    grid-column: 2 / 6;
+    grid-row: 1 / 2;
+    z-index: 50;
 }
 
 .side-content .block {
-    width: 250px;
+    grid-row: 1 / 2;
     height: 100%;
     background: var(--yellow);
-    grid-column: 6 / 6;
+    grid-column: 4 / 7;
 }
 
 
@@ -176,17 +185,24 @@ footer {
     justify-content: space-evenly;
     grid-area: footer;
     grid-row: 3 / 5;
-    padding-top: 2rem;
+    padding-top: 3rem;
+    margin-top: auto;
     border-top-right-radius: 3rem;
+    max-height: 400px;
+    bottom: 0;
+    /* position: absolute; */
 }
 
 .hero-card {
+    margin-top: auto;
+    height:  150px;
     background: var(--blue);
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
+    display: flex;
+    justify-content: center;
 }
 
 .hero-card img {
-    width: 100%;
-    max-width: 200px;
+    width: 130px;
 }
