--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ header {
     height: 8rem;
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
     grid-area: header;
     grid-column: 1 / 3;
     grid-row: 1/3;
@@ -105,7 +105,7 @@ header {
 
 .navbar {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
     /* display: none; */
 }
@@ -130,7 +130,7 @@ header {
 }
 
 .main-content h5 {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: 300;
     margin-top: -7rem;
 }
@@ -143,8 +143,9 @@ header {
     margin-top: 30px;
     max-width: 400px;
     font-weight: 300;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: justify;
+    text-transform: capitalize;
 }
 
 /* side content */
@@ -185,7 +186,7 @@ footer {
     justify-content: space-evenly;
     grid-area: footer;
     grid-row: 3 / 5;
-    padding-top: 3rem;
+    padding-top: 2rem;
     margin-top: auto;
     border-top-right-radius: 3rem;
     max-height: 400px;
